[package]
name = "adui-dioxus"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["macro", "signals", "hooks", "html", "launch", "web", "logger"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["DomRect", "Element", "PointerEvent", "Navigator", "Clipboard"] }
