[package]
name = "adui-dioxus"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A UI component library for Dioxus that ports Ant Design 6.0.0 to Rust, providing rich components with Ant Design's design language and patterns"
repository = "https://github.com/feisan/adui-dioxus"
homepage = "https://github.com/feisan/adui-dioxus"
documentation = "https://github.com/feisan/adui-dioxus/tree/main/docs"

[dependencies]
dioxus = { version = "0.7", features = ["macro", "signals", "hooks", "html", "launch", "web", "logger"] }
dioxus-html = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["DomRect", "Element", "PointerEvent", "Navigator", "Clipboard", "FormData", "XmlHttpRequest", "XmlHttpRequestUpload", "ProgressEvent", "Blob"] }
regex = "1"
time = { version = "0.3", default-features = false, features = ["alloc"] }
